@@ -1,6 +1,8 @@
 0.11.2
- - setup: bump dclab from 0.40.0 to 0.41.0
+ - fix: make sure self-signed SSL certificates of DCOR-med instances
+   are used everywhere (#61)
  - ref: move dcor access token code to dclab
+ - setup: bump dclab from 0.40.0 to 0.41.0
 0.11.1
  - fix: CLI did not verify individual upload steps (#59)
  - enh: add additional step "wait-dcor" during verification task (#54)
